--- a/html/menu.html
+++ b/html/menu.html
@@ -87,7 +87,7 @@
         <nav>
             <ul class="navcontent">
                 <li><a href="../index.html">Home</a></li>
-                <li class="active"><a href="menu.html">Menu</a></li>
+                <li class="activeNav"><a href="menu.html">Menu</a></li>
                 <li><a href="html/about.html">About</a></li>
                 <li><a href="html/faq.html">FAQ</a></li>
                 <li><a href="html/reviews.html">Reviews</a></li>
