added about img section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,31 @@
         </div>
     </section>
 
-    <!--about section-->
+    <!--gallery section-->
+    <section class="gallery">
+        <div class="galleryVid">
+            <div class="classics">
+                <img src="images/tiramisu3.jpg">
+            </div>
+            <div class="classics">
+                <img src="images/waffle.jpg">
+            </div>
+        </div>
+        <div class="classicItems">
+            <div class="classics">
+                <img src="images/gallery5.jpg">
+            </div>
+            <div class="classics">
+                <img src="images/gallery6.jpg">
+            </div>
+            <div class="classics">
+                <img src="images/gallery7.jpg">
+            </div>
+            <div class="classics">
+                <img src="images/gallery8.jpg">
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer>
