added about video sect

--- a/index.html
+++ b/index.html
@@ -179,12 +179,14 @@
     <!--gallery section-->
     <section class="gallery">
         <div class="galleryVid">
-            <div class="classics">
-                <img src="images/tiramisu3.jpg">
-            </div>
-            <div class="classics">
-                <img src="images/waffle.jpg">
-            </div>
+            <video width="572" height="370" autoplay>
+                <source src="videos/vid1.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <video width="572" height="370" autoplay>
+                <source src="videos/vid2.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
         <div class="classicItems">
             <div class="classics">
@@ -210,8 +212,8 @@
                     <img class="logoFooter" src="images/logoFooter.png" alt="logo">
                 </a>
                 <h4>
-                    Lorem ipsum dolor amet consecto adi pisicing elit <br/>
-                    ed eiusm tempor incidid unt labore dolore.
+                    Contact us for nationwide delivery or <br/>
+                    local, in-store pick up.
                 </h4>
                 <p><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>  Kamalpokhari, Kathmandu</p>
                 <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i> 01-4987345</p>
