changed footer text

--- a/html/menu.html
+++ b/html/menu.html
@@ -196,8 +196,8 @@
                     <img class="logoFooter" src="../images/logoFooter.png" alt="logo">
                 </a>
                 <h4>
-                    Lorem ipsum dolor amet consecto adi pisicing elit <br/>
-                    ed eiusm tempor incidid unt labore dolore.
+                    Contact us for nationwide delivery or <br/>
+                    local, in-store pick up.
                 </h4>
                 <p><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>  Kamalpokhari, Kathmandu</p>
                 <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i> 01-4987345</p>
