--- a/index.html
+++ b/index.html
@@ -190,16 +190,53 @@
         </div>
         <div class="classicItems">
             <div class="classics">
-                <img src="images/gallery5.jpg">
+                <img src="images/gallery5.jpg" alt="galleryphoto">
             </div>
             <div class="classics">
-                <img src="images/gallery6.jpg">
+                <img src="images/gallery6.jpg" alt="galleryphoto">
             </div>
             <div class="classics">
-                <img src="images/gallery7.jpg">
+                <img src="images/gallery7.jpg" alt="galleryphoto">
             </div>
             <div class="classics">
-                <img src="images/gallery8.jpg">
+                <img src="images/gallery8.jpg" alt="galleryphoto">
+            </div>
+        </div>
+    </section>
+
+    <!--team section-->
+    <section class ="teamSection">
+        <h1 style="text-align: center; font-size: 50px; color:#6F4E37">Meet Our Team</h1>
+        <div class="teamContainer">
+            <div class="members">
+                <img src = "images/chef1.jpg" alt="team">
+                <div class="overlay">
+                    <h3 class="text">
+                        Michael Smith <br/>
+                        Executive Chef <br/>
+                        2015
+                    </h3>
+                </div>
+            </div>
+            <div class="members">
+                <img src = "images/chef2.jpg" alt="team">
+                <div class="overlay">
+                    <h3 class="text">
+                        Lui Fang <br/>
+                        Head Chef <br/>
+                        2012
+                    </h3>
+                </div>
+            </div>
+            <div class="members">
+                <img src = "images/chef3.jpg" alt="team">
+                <div class="overlay">
+                    <h3 class="text">
+                        Luke Wilson <br/>
+                        Junior Chef <br/>
+                        2020
+                    </h3>
+                </div>
             </div>
         </div>
     </section>
