changed useful links

--- a/html/menu.html
+++ b/html/menu.html
@@ -215,10 +215,9 @@
             <div class="usefulLinks">
                 <h2>Useful Links</h2>
                 <ul>
-                    <li><a href="html/blog.html">Menu</a></li>
-                    <li><a href="html/products.html">About</a></li>
-                    <li><a href="html/research.html">FAQ</a></li>
-                    <li><a href="html/aboutus.html">Reviews</a></li>
+                    <li><a href="https://www.dominosugar.com/baking-tips-how-tos/basic-baking-tips" target="_blank">Tips</a></li>
+                    <li><a href="https://www.loveandlemons.com/baking-recipes/" target="_blank">Recipes</a></li>
+                    <li><a href="https://www.escoffier.edu/blog/baking-pastry/baking-basics-essential-baking-tips-and-techniques-for-beginners/" target="_blank">Basics</a></li>
                 </ul>
             </div>
             <div class="subscription">
