added view more function

--- a/index.html
+++ b/index.html
@@ -422,5 +422,12 @@
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/slider.js"></script>
 
+    <script>
+        function viewMore() {
+            document.getElementById("viewMoreItems").style.display = "flex";
+            document.getElementById("viewMoreContainer").style.display = "none";
+        }
+    </script>
+    
 </body>
 </html>
