menu items path

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="card">
             <div class="productImage">
                 <a href="../html/productDwarfJade.html">
-                    <img src="../images/cinnamon.jpg" alt="cinnamonRolls">
+                    <img src="images/cinnamon.jpg" alt="cinnamonRolls">
                 </a>
             </div>
             <div class="productInfo">
@@ -92,7 +92,7 @@
         <div class="card">
             <div class="productImage">
                 <a href="../html/productSatsukiAzalea.html">
-                    <img src="../images/cookie.jpg" alt="cookies">
+                    <img src="images/cookie.jpg" alt="cookies">
                 </a>
             </div>
             <div class="productInfo">
@@ -103,7 +103,7 @@
         <div class="card">
             <div class="productImage">
                 <a href="../html/productChineseElm.html">
-                    <img src="../images/cheesecake.jpg" alt="cheesecake">
+                    <img src="images/cheesecake.jpg" alt="cheesecake">
                 </a>
             </div>
             <div class="productInfo">
@@ -117,7 +117,7 @@
         <div class="card">
             <div class="productImage">
                 <a href="../html/productPonytailPalm.html">
-                    <img src="../images/muffin.jpg" alt="muffin">
+                    <img src="images/muffin.jpg" alt="muffin">
                 </a>
             </div>
             <div class="productInfo">
@@ -128,7 +128,7 @@
         <div class="card">
             <div class="productImage">
                 <a href="../html/productGinsengFicus.html">
-                    <img src="../images/waffle.jpg" alt="waffle">
+                    <img src="images/waffle.jpg" alt="waffle">
                 </a>
             </div>
             <div class="productInfo">
@@ -139,7 +139,7 @@
         <div class="card">
             <div class="productImage">
                 <a href="../html/productChineseSweetPlum.html">
-                    <img src="../images/tiramisu3.jpg" alt="tiramisu">
+                    <img src="images/tiramisu3.jpg" alt="tiramisu">
                 </a>
             </div>
             <div class="productInfo">
@@ -158,7 +158,7 @@
         <div class="card">
             <div class="productImage">
                 <a href="../html/productPonytailPalm.html">
-                    <img src="../images/plainMuffin.jpg" alt="plainMuffin">
+                    <img src="images/plainMuffin.jpg" alt="plainMuffin">
                 </a>
             </div>
             <div class="productInfo">
@@ -428,6 +428,6 @@
             document.getElementById("viewMoreContainer").style.display = "none";
         }
     </script>
-    
+
 </body>
 </html>
